add og-tag, favicon, ga script

--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/calculator.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
+
     <title>은퇴 자산 계산기</title>
+
+    <meta property="og:title" content="은퇴자산 계산기">
+    <meta property="og:description" content="얼마의 돈이 있어야, 일하지 않고 살 수 있을까요?">
+    <meta property="og:image" content="img/retirement-calculator-meta.png">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-82F93JTKZV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-82F93JTKZV');
+    </script>
 </head>
 <body>
     <section id="contents">
@@ -136,7 +152,7 @@
     <section id="copyright">
         <p>
             ※ 피드백은 언제나 환영입니다. <br>
-            onsoo.jeong@gmail.com
+            <a href="mailto:onsoo.jeong@gmail.com">onsoo.jeong@gmail.com</a>로 의견을 보내주세요.
         </p>
     </section>
     <script type="text/javascript" src="js/calculator.js"></script>
